<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".SignUPActivity">

    <TextView
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:id="@+id/top_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="20dp"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_back_draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <EditText
            android:id="@+id/firstname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:hint="@string/first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lastname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/last_name"
            app:layout_constraintTop_toBottomOf="@id/firstname_edittext" />
        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/user_name"
            app:layout_constraintTop_toBottomOf="@id/lastname_edittext"
            />
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/username_edittext"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/passwordconfirm_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/password_confirm"
            app:layout_constraintTop_toBottomOf="@id/password_edittext"
            tools:ignore="LabelFor" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buton_back_draw"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/passwordconfirm_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_any_account_sign_up"
            app:layout_constraintStart_toStartOf="@id/signup_button"
            app:layout_constraintTop_toBottomOf="@id/signup_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>